fix(service): 添加BM25关键字召回，优化召回与线性加权排序机制
- 新增 LuceneIndexService 实现基于 Lucene 的全文检索召回
- 添加 HanLP 中文分词器支持与测试用例- 实现 RagCallBackService 整合向量、BM25 和手工排名的多路召回
- 替换原有 RagService 召回逻辑，统一由 RagCallBackService 处理
- 调整前端 rag-document-dialog 展示字段，适配新评分体系
- 更新常量配置以支持新的召回与排序参数
- 添加 Lucene、HanLP 相关依赖至 pom.xml
- 配置 Docker 挂载 lucene_index 目录并更新 .gitignore 忽略该目录- 移除旧版 rerank 默认开关及线性加权相关冗余代码